fix obj extension

--- a/ObjC/Podfile
+++ b/ObjC/Podfile
@@ -7,9 +7,9 @@ target 'AEPSampleExtensionObjC' do
 
   # Pods for AEPSampleExtensionObjC
 
-  pod 'AEPCore', :git => 'git@github.com:adobe/aepsdk-core-ios.git', :branch => 'main'
-  pod 'AEPServices', :git => 'git@github.com:adobe/aepsdk-core-ios.git', :branch => 'main'
-  pod 'AEPRulesEngine', :git => 'git@github.com:adobe/aepsdk-rulesengine-ios.git', :branch => 'main'
+  pod 'AEPCore', '~> 3.0'
+  pod 'AEPServices', '~> 3.0'
+  pod 'AEPRulesEngine', '~> 1.0'
 
   target 'AEPSampleExtensionObjCTests' do
     # Pods for testing
