--- a/Swift/Podfile
+++ b/Swift/Podfile
@@ -3,9 +3,9 @@ platform :ios, '10.0'
 use_frameworks!
 
 target 'AEPSampleExtensionSwift' do
-  pod 'AEPCore', :git => 'git@github.com:adobe/aepsdk-core-ios.git', :branch => 'main'
-  pod 'AEPServices', :git => 'git@github.com:adobe/aepsdk-core-ios.git', :branch => 'main'
-  pod 'AEPRulesEngine', :git => 'git@github.com:adobe/aepsdk-rulesengine-ios.git', :branch => 'main'
+  pod 'AEPCore', '~> 3.0'
+  pod 'AEPServices', '~> 3.0'
+  pod 'AEPRulesEngine', '~> 1.0'
 
   target 'AEPSampleExtensionSwiftTests' do
   end
